--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "secp256k1"]
 	path = secp256k1
-	url = git@github.com:kdmukai/secp256k1.git
+	url = https://github.com/kdmukai/secp256k1.git
 	branch = esp32_micropython_support
